--- a/ToDoList.html
+++ b/ToDoList.html
@@ -7,7 +7,7 @@
             <h1>To Do List</h1>
             <input type="text" name="To Do" id="To-do-list">
             <button onclick="addTask()">Add</button>
-            
+            <ul id="task-list"></ul>
 
         </div>
     </body>
