Created the js File

--- a/ToDoList.html
+++ b/ToDoList.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<title>To Do List</title>
+
 <html>
-    <body>
-        <div id="To-do-list">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
+    <title>To-Do List</title>
+</head>
+<body>
+    <div class="To-do-list">
 
-            <h1>To Do List</h1>
-            <input type="text" name="To Do" id="To-do-list">
-            <button onclick="addTask()">Add</button>
-            <ul id="task-list"></ul>
+        <h1>To Do List</h1>
+        <input type="text" name="To Do" id="To-do-list">
+        <button onclick="addTask()">Add</button>
+        <ul id="task-list"></ul>
 
-        </div>
-    </body>
+    </div>
+
+    <script src="script.js"></script>
+</body>
 </html>
+
+<link rel="script" href="">
