Added lots of code, mainly updated the styling, figuring out certain parts of the CSS code

--- a/ToDoList.html
+++ b/ToDoList.html
@@ -10,25 +10,25 @@
     <div class="to-do-panels">
         
         <div class="panel_not-started" id="divNotStarted">
-            <h5>Not Started</h5>
+            <h5 id="notStartedHeading">Not Started</h5>
             <ul id="NotStarted"></ul> 
         </div>
 
         <div class="panel_in-progress" id="divInProgress">
-            <h5>In Progress</h5>
+            <h5 id="inProgressHeading">In Progress</h5>
             <ul id="InProgress"></ul>
         </div>
             
 
         <div class="panel_completed" id="divCompleted">
-            <h5>Completed</h5>
+            <h5 id="completedHeading">Completed</h5>
             <ul id="Completed"></ul>
         </div>
 
     </div>
 
     <form id="addTasks">
-        <label for="input">Add Tasks</label> <br>
+        <label for="input" id="inputHeading">Add Tasks</label> <br>
         <input type="text" name="Tasks" id="inputText"> 
         <br>
         <button type="button" id="submitButton"> Add Item</button>
