--- a/ToDoList.html
+++ b/ToDoList.html
@@ -11,27 +11,29 @@
         
         <div class="panel_not-started" id="divNotStarted">
             <h5 id="notStartedHeading">Not Started</h5>
-            <ul id="NotStarted"></ul> 
+            <ul class="NotStartedUL" id="NotStarted"></ul> 
         </div>
 
         <div class="panel_in-progress" id="divInProgress">
             <h5 id="inProgressHeading">In Progress</h5>
-            <ul id="InProgress"></ul>
+            <ul class="InProgressUL" id="InProgress"></ul>
         </div>
             
 
         <div class="panel_completed" id="divCompleted">
             <h5 id="completedHeading">Completed</h5>
-            <ul id="Completed"></ul>
+            <ul class="CompletedUL" id="Completed"></ul>
         </div>
 
     </div>
 
     <form id="addTasks">
+        <div id="submitSection">
         <label for="input" id="inputHeading">Add Tasks</label> <br>
         <input type="text" name="Tasks" id="inputText"> 
         <br>
         <button type="button" id="submitButton"> Add Item</button>
+        </div>
     </form>
 
 
