Added more code to the files

--- a/ToDoList.html
+++ b/ToDoList.html
@@ -12,6 +12,11 @@
         <div class="panel_not-started" id="divNotStarted">
             <h5 id="notStartedHeading">Not Started</h5>
             <ul class="NotStartedUL" id="NotStarted"></ul> 
+            
+                <div id="notStartedSubmit">
+                <button type="button" id="notStartedButton"> Add Item</button>
+                <input type="text" name="Tasks" id="notStartedInput"> 
+                </div>
         </div>
 
         <div class="panel_in-progress" id="divInProgress">
